# HypotheSAEs

./: CHANGELOG.md  pyproject.toml
goemotions/: 01_data_embeddings_sae.ipynb  02_hypotheses_evaluation.ipynb  03_followups.ipynb  04_cross_platform.ipynb  ge_pipeline.py
hypothesaes/: embedding.py  interpret_neurons.py  llm_api.py
tests/: test_interpretation_metrics.py
